--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -6,11 +6,14 @@ $header-padding: 1.1em;
 $small: 450px;
 $medium: 780px;
 $large: 1000px;
+$xlarge: 1700px;
 
 //colors
 $orange: #fc8019;
 $unselected: #3d4152;
 $selected: #0f1014;
+$border-light: #0a090941;
+$blue: rgba(27, 75, 220, 0.848);
 
 //alignments
 .center {
