--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -4,30 +4,77 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', Helvetica,Arial,sans-serif;
+  font-family: Helvetica,Arial,sans-serif;
+  font-weight: 200;
+}
+
+.wrapper {
+  max-width: 100%;
+}
+
+a, a:hover, a:focus, a:visited {
+  text-decoration: none;
+}
+
+h1 {
+  font-weight: 400;
+}
+
+h4 {
+  font-weight: 500;
+  letter-spacing: 0.5px;
 }
 
 .content-padding {
   padding: $content-padding;
+
+  @media (max-width: $medium) {
+    padding: 1em;
+  }
+}
+
+.hide-on-mobile {
+  @media screen and (max-width: $medium) {
+    display: none;
+  }
+}
+
+.show-on-mobile {
+  @media screen and (max-width: $medium) {
+    display: grid;
+  }
+
+  @media screen and (min-width: $medium) {
+    display: none;
+  }
 }
 
 .page-layout {
-  position: relative;
+  
+  @media screen and (max-width: $medium) {
+    margin-bottom: 4em;
+  }
 }
 
 .grid {
   display: grid;
-  grid-gap: 16px;
+  grid-gap: 1em;
+  justify-content: center;
+  align-items: start;
 
   @media (min-width: $small) {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 
   @media (min-width: $medium) {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 
   @media (min-width: $large) {
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media (min-width: $xlarge) {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
