--- a/client/src/components/Section/styles.scss
+++ b/client/src/components/Section/styles.scss
@@ -1,5 +1,7 @@
 .section {
-  height: 50vh;
-  width: 100%;
-  margin: 2em auto;
+
+  &__heading {
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
 }
