feat(template): basic server data integration and functionality

--- a/client/src/components/Card/styles.scss
+++ b/client/src/components/Card/styles.scss
@@ -26,6 +26,13 @@
     align-items: baseline;
   }
 
+  .img-layout {
+    border: 1px solid $border-dim;
+    height: 10em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+  }
+
   // &__badge {
   //   position: absolute;
   //   left: -8px;
@@ -73,7 +80,7 @@
     margin-top: $header-padding;
     padding-top: $box-padding;
     opacity: 0;
-    
+
     a {
       color: $blue;
       font-weight: 500;
