--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -10,6 +10,9 @@ $xlarge: 1700px;
 
 //colors
 $orange: #fc8019;
+$dark-orange: #5d2f0a;
+$red: #f7473e;
+$dark-red: #8e1515;
 $unselected: #3d4152;
 $selected: #0f1014;
 $border-light: #0a090941;
